test/fixtures/errors/force_colors.js
'use strict';
throw new Error('Should include grayed stack trace');
